--- a/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
@@ -12,9 +12,9 @@
             required
             readonly
             [ngClass]="{
-              'is-invalid': this.form.controls.id.status != 'VALID',
-              'is-valid': this.form.controls.id.status == 'VALID',
-              'form-control': true
+              'is-invalid': this.form.controls.id.status !== 'VALID',
+              'is-valid': this.form.controls.id.status === 'VALID',
+              'form-control': true,
             }" />
           <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
@@ -27,9 +27,9 @@
           <label for="name" class="form-label">Name</label>
           <textarea
             [ngClass]="{
-              'is-invalid': this.form.controls.name.status != 'VALID',
-              'is-valid': this.form.controls.name.status == 'VALID',
-              'form-control': true
+              'is-invalid': this.form.controls.name.status !== 'VALID',
+              'is-valid': this.form.controls.name.status === 'VALID',
+              'form-control': true,
             }"
             formControlName="name"
             id="name"
@@ -51,9 +51,9 @@
             (change)="changeType($event)"
             formControlName="type"
             [ngClass]="{
-              'is-invalid': this.form.controls.type.status != 'VALID',
-              'is-valid': this.form.controls.type.status == 'VALID',
-              'form-select': true
+              'is-invalid': this.form.controls.type.status !== 'VALID',
+              'is-valid': this.form.controls.type.status === 'VALID',
+              'form-select': true,
             }"
             id="type">
             <option *ngFor="let typeObj of deviceTypeDict.list; let i = index">
@@ -72,9 +72,9 @@
             (change)="changeCategory($event)"
             formControlName="category"
             [ngClass]="{
-              'is-invalid': this.form.controls.category.status != 'VALID',
-              'is-valid': this.form.controls.category.status == 'VALID',
-              'form-select': true
+              'is-invalid': this.form.controls.category.status !== 'VALID',
+              'is-valid': this.form.controls.category.status === 'VALID',
+              'form-select': true,
             }"
             id="category">
             <option *ngFor="let categoryObj of deviceCategoryDict.list; let i = index">
@@ -93,9 +93,9 @@
             (change)="changeCategory($event)"
             formControlName="component"
             [ngClass]="{
-              'is-invalid': this.form.controls.component.status != 'VALID',
-              'is-valid': this.form.controls.component.status == 'VALID',
-              'form-select': true
+              'is-invalid': this.form.controls.component.status !== 'VALID',
+              'is-valid': this.form.controls.component.status === 'VALID',
+              'form-select': true,
             }"
             id="component"
             ngbPopover="Select where you want use this attribute"
