--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -18,7 +18,7 @@
                 [ngClass]="{
                   'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
-                  'form-select': true
+                  'form-select': true,
                 }"
                 id="deviceId">
                 <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj._id }}">
@@ -42,7 +42,7 @@
                 [ngClass]="{
                   'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
-                  'form-select': true
+                  'form-select': true,
                 }"
                 id="modelId">
                 <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj._id }}">
@@ -66,7 +66,7 @@
                 [ngClass]="{
                   'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
                   'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
-                  'form-select': true
+                  'form-select': true,
                 }"
                 id="connectionId">
                 <option
@@ -93,9 +93,9 @@
             formControlName="attributeDictionaryId"
             formControlName="attributeDictionaryId"
             [ngClass]="{
-              'is-invalid': this.addAttributeFrom.controls.attributeDictionaryId.status != 'VALID',
-              'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status == 'VALID',
-              'form-select': true
+              'is-invalid': this.addAttributeFrom.controls.attributeDictionaryId.status !== 'VALID',
+              'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status === 'VALID',
+              'form-select': true,
             }"
             id="attributeDictionaryId">
             <option
@@ -125,9 +125,9 @@
             id="id"
             required
             [ngClass]="{
-              'is-invalid': this.addAttributeFrom.controls.value.status != 'VALID',
-              'is-valid': this.addAttributeFrom.controls.value.status == 'VALID',
-              'form-control': true
+              'is-invalid': this.addAttributeFrom.controls.value.status !== 'VALID',
+              'is-valid': this.addAttributeFrom.controls.value.status === 'VALID',
+              'form-control': true,
             }" />
           <div class="invalid-feedback">Please select a valid state.</div>
           <div *ngIf="this.addAttributeFrom.controls.value.errors" class="invalid-feedback">
