--- a/src/app/components/floors/add-floor/add-floor.component.html
+++ b/src/app/components/floors/add-floor/add-floor.component.html
@@ -2,12 +2,12 @@
   <h3><i class="bi bi-building"></i> Add Floor</h3>
   <form [formGroup]="floorForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
     <div class="form-group mb-3">
-      <label>Id: {{ this.floorForm.controls.id.value }} </label>
+      <label for="id" class="form-label">Id: {{ this.floorForm.controls.id.value }} </label>
     </div>
 
     <div class="col border">
       <div class="form-group mb-3">
-        <label>Name</label>
+        <label for="name" class="form-label">Name</label>
         <textarea
           formControlName="name"
           rows="2"
@@ -15,9 +15,9 @@
           maxlength="4000"
           required
           [ngClass]="{
-            'is-invalid': this.floorForm.controls.name.status != 'VALID',
-            'is-valid': this.floorForm.controls.name.status == 'VALID',
-            'form-control': true
+            'is-invalid': this.floorForm.controls.name.status !== 'VALID',
+            'is-valid': this.floorForm.controls.name.status === 'VALID',
+            'form-control': true,
           }"></textarea>
         <div *ngIf="this.floorForm.controls.name.errors" class="invalid-feedback">
           <div *ngIf="this.floorForm.controls.name.errors.required">Name is required</div>
@@ -36,9 +36,9 @@
                 id="street"
                 required
                 [ngClass]="{
-                  'is-invalid': this.floorForm.controls.address.controls.street.status != 'VALID',
-                  'is-valid': this.floorForm.controls.address.controls.street.status == 'VALID',
-                  'form-control': true
+                  'is-invalid': this.floorForm.controls.address.controls.street.status !== 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.street.status === 'VALID',
+                  'form-control': true,
                 }" />
               <div *ngIf="this.floorForm.controls.address.controls.street.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.street.errors.required">Street is required</div>
@@ -57,9 +57,9 @@
                 id="city"
                 required
                 [ngClass]="{
-                  'is-invalid': this.floorForm.controls.address.controls.city.status != 'VALID',
-                  'is-valid': this.floorForm.controls.address.controls.city.status == 'VALID',
-                  'form-control': true
+                  'is-invalid': this.floorForm.controls.address.controls.city.status !== 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.city.status === 'VALID',
+                  'form-control': true,
                 }" />
               <div *ngIf="this.floorForm.controls.address.controls.city.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.city.errors.required">City is required</div>
@@ -78,9 +78,9 @@
                 id="country"
                 required
                 [ngClass]="{
-                  'is-invalid': this.floorForm.controls.address.controls.country.status != 'VALID',
-                  'is-valid': this.floorForm.controls.address.controls.country.status == 'VALID',
-                  'form-control': true
+                  'is-invalid': this.floorForm.controls.address.controls.country.status !== 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.country.status === 'VALID',
+                  'form-control': true,
                 }" />
               <div *ngIf="this.floorForm.controls.address.controls.country.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.country.errors.required">country is required</div>
@@ -99,9 +99,9 @@
                 id="postcode"
                 required
                 [ngClass]="{
-                  'is-invalid': this.floorForm.controls.address.controls.postcode.status != 'VALID',
-                  'is-valid': this.floorForm.controls.address.controls.postcode.status == 'VALID',
-                  'form-control': true
+                  'is-invalid': this.floorForm.controls.address.controls.postcode.status !== 'VALID',
+                  'is-valid': this.floorForm.controls.address.controls.postcode.status === 'VALID',
+                  'form-control': true,
                 }" />
               <div *ngIf="this.floorForm.controls.address.controls.postcode.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.postcode.errors.required">
@@ -126,7 +126,7 @@
             <div class="row">
               <div class="col">
                 <div class="form-group mb-3">
-                  <label>Description</label>
+                  <label for="description" class="form-label">Description</label>
                   <textarea
                     formControlName="description"
                     rows="2"
@@ -134,9 +134,9 @@
                     maxlength="4000"
                     required
                     [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.description.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.description.status == 'VALID',
-                      'form-control': true
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.description.status !== 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.description.status === 'VALID',
+                      'form-control': true,
                     }"></textarea>
                   <div
                     *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors"
@@ -161,9 +161,9 @@
                     id="xPos"
                     required
                     [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.xPos.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.xPos.status == 'VALID',
-                      'form-control': true
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.xPos.status !== 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.xPos.status === 'VALID',
+                      'form-control': true,
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.xPos.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.xPos.errors?.required">
@@ -184,9 +184,9 @@
                     id="yPos"
                     required
                     [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.yPos.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.yPos.status == 'VALID',
-                      'form-control': true
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.yPos.status !== 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.yPos.status === 'VALID',
+                      'form-control': true,
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.yPos.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.yPos.errors?.required">
@@ -207,9 +207,9 @@
                     id="hPos"
                     required
                     [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.hPos.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.hPos.status == 'VALID',
-                      'form-control': true
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.hPos.status !== 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.hPos.status === 'VALID',
+                      'form-control': true,
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.hPos.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.hPos.errors?.required">
@@ -232,9 +232,9 @@
                     id="x"
                     required
                     [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.x.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.x.status == 'VALID',
-                      'form-control': true
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.x.status !== 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.x.status === 'VALID',
+                      'form-control': true,
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.required">X is required</div>
@@ -253,9 +253,9 @@
                     id="y"
                     required
                     [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.y.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.y.status == 'VALID',
-                      'form-control': true
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.y.status !== 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.y.status === 'VALID',
+                      'form-control': true,
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.required">Y is required</div>
@@ -274,9 +274,9 @@
                     id="h"
                     required
                     [ngClass]="{
-                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.h.status != 'VALID',
-                      'is-valid': this.floorForm.controls.dimension.at(i).controls.h.status == 'VALID',
-                      'form-control': true
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.h.status !== 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.h.status === 'VALID',
+                      'form-control': true,
                     }" />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.required">h is required</div>
