--- a/src/app/components/models/add-model/add-model.component.html
+++ b/src/app/components/models/add-model/add-model.component.html
@@ -8,8 +8,8 @@
             <label for="name" class="form-label">Name</label>
             <input
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.name.status != 'VALID',
-                'is-valid': this.addModelForm.controls.name.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.name.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.name.status === 'VALID',
                 'form-control': true,
               }"
               formControlName="name"
@@ -35,8 +35,8 @@
               minlength="1"
               required
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.dimension.controls.width.status != 'VALID',
-                'is-valid': this.addModelForm.controls.dimension.controls.width.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.dimension.controls.width.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.dimension.controls.width.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.dimension.controls.width.errors" class="invalid-feedback">
@@ -63,8 +63,8 @@
               minlength="1"
               required
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.dimension.controls.height.status != 'VALID',
-                'is-valid': this.addModelForm.controls.dimension.controls.height.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.dimension.controls.height.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.dimension.controls.height.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.dimension.controls.height.errors" class="invalid-feedback">
@@ -86,8 +86,8 @@
               minlength="1"
               required
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.dimension.controls.depth.status != 'VALID',
-                'is-valid': this.addModelForm.controls.dimension.controls.depth.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.dimension.controls.depth.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.dimension.controls.depth.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.dimension.controls.depth.errors" class="invalid-feedback">
@@ -108,8 +108,8 @@
               formControlName="front"
               id="front"
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.texture.controls.front.status != 'VALID',
-                'is-valid': this.addModelForm.controls.texture.controls.front.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.texture.controls.front.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.texture.controls.front.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.front.errors" class="invalid-feedback">
@@ -128,8 +128,8 @@
               formControlName="back"
               id="back"
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.texture.controls.back.status != 'VALID',
-                'is-valid': this.addModelForm.controls.texture.controls.back.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.texture.controls.back.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.texture.controls.back.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.back.errors" class="invalid-feedback">
@@ -148,8 +148,8 @@
               formControlName="side"
               id="side"
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.texture.controls.side.status != 'VALID',
-                'is-valid': this.addModelForm.controls.texture.controls.side.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.texture.controls.side.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.texture.controls.side.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.side.errors" class="invalid-feedback">
@@ -168,8 +168,8 @@
               formControlName="top"
               id="top"
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.texture.controls.top.status != 'VALID',
-                'is-valid': this.addModelForm.controls.texture.controls.top.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.texture.controls.top.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.texture.controls.top.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.top.errors" class="invalid-feedback">
@@ -186,8 +186,8 @@
               formControlName="botom"
               id="botom"
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.texture.controls.botom.status != 'VALID',
-                'is-valid': this.addModelForm.controls.texture.controls.botom.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.texture.controls.botom.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.texture.controls.botom.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.botom.errors" class="invalid-feedback">
@@ -207,8 +207,8 @@
               (change)="changeType($event)"
               formControlName="type"
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.type.status != 'VALID',
-                'is-valid': this.addModelForm.controls.type.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.type.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.type.status === 'VALID',
                 'form-select': true,
               }"
               id="type">
@@ -228,8 +228,8 @@
               (change)="changeCategory($event)"
               formControlName="category"
               [ngClass]="{
-                'is-invalid': this.addModelForm.controls.category.status != 'VALID',
-                'is-valid': this.addModelForm.controls.category.status == 'VALID',
+                'is-invalid': this.addModelForm.controls.category.status !== 'VALID',
+                'is-valid': this.addModelForm.controls.category.status === 'VALID',
                 'form-select': true,
               }"
               id="category">
